test/envoy-compose.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: web_service
                http_filters:
                  - name: envoy.filters.http.wasm
                    config:
                      config:
                        name: "my_plugin"
                        root_id: "my_root_id"
                        vm_config:
                          vm_id: "my_vm_id"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/tmp/http-headers-wasm/http-headers.wasm"
                          allow_precompiled: true
                  - name: envoy.router
                    config: {}
  clusters:
    - name: web_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: web_service
                      port_value: 9000
